[package]
name = "day_count_conventions"
description = "Day Count Conventions for Financial Application."
documentation = "https://docs.rs/day_count_conventions/latest/day_count_conventions/"
homepage = "https://crates.io/crates/day_count_conventions"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/MeetThePatel/day_count_conventions.rs"
license-file = "LICENSE"
readme = "README.md"
keywords = ["finance", "time", "date"]
categories = ["date-and-time", "finance"]

[dependencies]
chrono = { version = "0.4.38" }
hifitime = { version = "3.3.0", optional = true }

[features]
hifitime = ["dep:hifitime"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex_header.html", "--cfg", "docsrs"]
